[package]
name = "cellular_raza-template"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[patch.crates-io]
nalgebra = { git = "https://github.com/dimforge/nalgebra" }
ron = { git = "https://github.com/ron-rs/ron" }

[dependencies]
serde = "1.0"
rand = "0.9"
rand_chacha = "0.9"
nalgebra = "0.33"
cellular_raza = { git = "https://github.com/jonaspleyer/cellular_raza" }
num = "0.4"
rayon = "1.8"
kdam = { version="0.6", features = ["template"] }
